upgrade to bitsocket

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chainfeed": "^0.1.0",
     "dotenv": "^5.0.1",
+    "eventsource": "^1.0.7",
     "twitter": "^1.7.1"
   }
 }
